Archive2/d2/6288c826582dad/output
main.cpp:32:23: error: 'right' is a private member of 'Tree<int>::Node'
    value_type v = p->right->value;         // error: Node::right is private
                      ^
main.cpp:38:17: note: in instantiation of member function 'Tree<int>::g' requested here
    Tree<int>().g(nullptr);
                ^
main.cpp:8:15: note: implicitly declared private here
        Node* right;
              ^
main.cpp:32:30: error: 'value' is a private member of 'Tree<int>::Node'
    value_type v = p->right->value;         // error: Node::right is private
                             ^
main.cpp:10:20: note: implicitly declared private here
        value_type value;
                   ^
main.cpp:32:16: warning: unused variable 'v' [-Wunused-variable]
    value_type v = p->right->value;         // error: Node::right is private
               ^
main.cpp:25:16: warning: unused variable 'v' [-Wunused-variable]
    value_type v = left->value;             // OK: value_type is not associated with an object
               ^
main.cpp:33:8: note: in instantiation of member function 'Tree<int>::Node::f' requested here
    p->f(this);                             // OK
       ^
main.cpp:38:17: note: in instantiation of member function 'Tree<int>::g' requested here
    Tree<int>().g(nullptr);
                ^
2 warnings and 2 errors generated.
